...
  "txtReadCarefully": "Please read carefully before using this app",
  "txtAppPurpose": "This app calculates the estimated cardiovascular health score as defined by the",
  "txtFundamentalsLocation": "The scoring system and criteria are thoroughly explained in:",
  "txtLifeEssentialEightObjective": "Life’s Essential 8: Updating and Enhancing the American Heart Association’s Construct of Cardiovascular Health: A Presidential Advisory From the American Heart Association",
  "txtPaperAuthors": "Published by: Donald M. Lloyd-Jones, MD, ScM, FAHA, Chair; Norrina B. Allen, PhD, MPH, FAHA; Cheryl A.M. Anderson, PhD, MPH, MS, FAHA; Terrie Black, DNP, MBA, CRRN, FAHA; LaPrincess C. Brewer, MD, MPH; Randi E. Foraker, PhD, MA, FAHA; Michael A. Grandner, PhD, MTR, FAHA; Helen Lavretsky, MD, MS; Amanda Marma Perak, MD, MS, FAHA; Garima Sharma, MD; Wayne Rosamond, PhD, MS, FAH
  "txtFundamentalsLocationMainWindow": "Click here to read the foundations",
  "txtButtonAcceptTandC": "Accept",
  "txtButtonRejectTandC": "Cancel",
  "txtButtonWarnings": "Accept",
  "txtButtonAccept": "Accept",
  "txtButtonCancel": "Cancel",
  "txtCancelModalTitle": "Are you sure?",
  "txtCancelModalText": "Do you want to discard your changes?",
  "txtCancelModalDiscard": "Discard",
  "txtCancelModalVolver": "Return",
  "txtAppleWarning": "<p style=\"text-align:center\"><span style=\"font-size:16px\"><strong><span style=\"color:#ffffff\">IMPORTANT</span></strong></span></p>\n\n<p style=\"text-align:center\"><span style=\"font-size:14px\"><span style=\"color:#ffffff\">After loading all the information, the score will be displayed. It is just indicative and</span></span></p>\n\n<p style=\"text-align:center\"><spa
  "DATA INPUT START": "*************************************************************************************************************************************",
  "patientsDataInputTitle": "Enter Patient's Data",
  "txtSex": "Sex: ",
  "txtAge": "Age: ",
  "txtWeight": "Weight: ",
  "txtHeight": "Height: ",
  "inputSex": "Sex",
  "sexFemale": "Female",
...
  "labelMonths": "Months",
  "suffixAno": " year",
  "suffixAnos": " years",
  "suffixMes": " month",
  "suffixMeses": " months",
  "btnResetFields": "Reset",
  "btnContinue": "Continue",
  "DATA INPUT END": "*************************************************************************************************************************************",
  "txtDietButton": "Diet",
  "txtDietDialog": "Quantiles of DASH-style diet adherence (MEPA). Ages 2-19 y.';",
  "txtDietDialogOptions": "9-10 MEPA score points|7-8 MEPA score points|5-6 MEPA score points|3-4 MEPA score points|0-2 MEPA score points",
  "txtDietHelp": "**Quantiles of DASH-style diet adherence (MEPA)** refers to a statistical analysis method used to assess adherence to the DASH-style diet (DASH: Dietary Approaches to Stop Hypertension), which is a dietary pattern that emphasizes the consumption of fruits, vegetables, whole grains, lean proteins, and low-fat dairy products, while limiting intake of sodium, added sugars, and satur
  "txtDietWarning": "",
  "txtPhysicalActivityButton": "Physical Activity",
  "txtPhysicalActivityDialog": "Minutes of moderate or greater intensity activity per week. Ages: 6 to 9.",
  "txtPhysicalActivityDialogOptions": "≥ 420 minutes|360 - 419 minutes|300 - 359 minutes|240 - 299 minutes|120 - 239 minutes|1 - 119 minutes|No activity",
  "PHYSICAL ACTIVITY START": "*************************************************************************************************************************************",
  "physicalActivityQ1": "Q1. How many days per week do you engage in sports, games, physical exercises, dance or other physical activities?",
  "physicalActivityQ1Note": "(Consider only activities practiced outside of school)",
  "physicalActivityQ1Opt1": "None (skip to Q3)",
...
  "txtBodyMassIndexDialogOptions": "5th - < 85th percentile|85th - < 95th|95th percentile - < 120% of the 95th percentile|120% of the 95th - < 140% of the 95th percentile|≥ 140% of the 95th percentile",
  "txtBodyMassIndextHelp": "**BMI** stands for Body Mass Index, which is a measure of body fat based on an individual's height and weight. It is calculated by dividing an individual's weight in kilograms by their height in meters squared *(BMI = kg/m²)*. \n\n It is important to note that BMI is not a direct measure of body fat and does not take into account factors such as muscle mass or body comp
  "txtBodyMassIndexWarning": "",
  "BMI END": "*************************************************************************************************************************************",
  "SLEEP START": "*************************************************************************************************************************************",
  "txtTotalSleepTime": "Total daily sleep time\nincluding regular naps.",
  "txtSleepButton": "Sleep",
  "txtSleepDialog": "Average hours of sleep per night (or per 24 h for age ≤ 5)",
  "txtSleepDialogOptions": "Age-appropriate optimal range|< 1h above optimal range|< 1h above optimal range|1 - < 2h below or ≥1h above optimal range|2 - < 3h below optimal range|≥ 3h below optimal range",
  "txtSleepWarning": "",
  "SLEEP END": "*************************************************************************************************************************************",
  "SMOKE START": "*************************************************************************************************************************************",
  "txtSmokeExposureButton": "Smoke Exposure",
  "txtSmokeExposureDialog": "Combustible tobacco use or inhaled NDS use at any age (per clinician discretion); or secondhand smoke exposure",
  "txtSmokeExposureDialogOptions": "Never tried |Never tried but lives with indoor smoker at home |Tried any nicotine product, but > 30d ago |Tried any nicotine product, but > 30d ago and lives with indoor smoker at home |Currently using inhaled NDS |Currently using inhaled NDS and lives with indoor smoker at home |Current combustible use (any within 30d)",
  "txtSmokeExposureHelp": "**NDS** stands for nicotine-delivery system, which is a term used to describe any device or product that delivers *nicotine* to the body, including cigarettes, e-cigarettes, vaping devices, and other tobacco products.",
  "txtSmokeExposureWarning": "",
  "SMOKE END": "*************************************************************************************************************************************",
  "txtDiabetesButton": "Diabetes",
...
  "txtExamplePAD": "Ex.: 80",
  "txtPAS": "Sistolic BP:   ",
  "txtPAD": "Diastolic BP:  ",
  "txtReceivesMedication": "Receives medication",
  "txtRequired": " Required",
  "txtCalculate": "Calculate",
  "txtOK": "OK",
  "txtCancel": "Cancel",
  "txtAccept": "Accept",
  "txtPatientNormal": "Patient with normal BP",
  "txtPatHT": "Prehipertense patient",
  "txtPatHt1": "Hipertense 1",
  "txtPatHt2": "Hipertense 2",
...
