...
                            ScaffoldMessenger.of(context).showSnackBar(
                              SnackBar(
                                content: Text(snackBarText),
                                duration: const Duration(days: 1),
                                backgroundColor: isRedBackground ? Colors.red : Colors.black,
                                action: SnackBarAction(
                                  label: 'Ok',
                                  onPressed: () {
                                    // Hide virtual keyboard
                                    FocusScope.of(context).unfocus();
                                    ScaffoldMessenger.of(context).hideCurrentSnackBar();
                                    Navigator.of(context).pop();
                                  },
...
